feat: implement id payload separation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Library target
 add_library(search)
-target_include_directories(search PUBLIC 
+target_include_directories(search PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 target_sources(search PRIVATE
@@ -16,6 +16,9 @@ target_sources(search PRIVATE
 # Apps/demos
 add_executable(main_adjlist src/apps/main_adjlist_demo.cpp)
 target_link_libraries(main_adjlist PRIVATE search)
+
+add_executable(main_user_custom_graph src/apps/main_user_custom_graph.cpp)
+target_link_libraries(main_user_custom_graph PRIVATE search)
 
 enable_testing()
 add_subdirectory(tests)
