--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(unit_tests
   test_astar_admissible.cpp
   test_priority_queues.cpp
   test_edge_cases.cpp
+  test_solve_astar_easy.cpp
 )
 target_link_libraries(unit_tests PRIVATE search Catch2::Catch2WithMain)
 add_test(NAME unit_tests COMMAND unit_tests)
