--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,5 +13,8 @@ add_executable(unit_tests
   test_edge_cases.cpp
   test_solve_astar_easy.cpp
 )
-target_link_libraries(unit_tests PRIVATE search Catch2::Catch2WithMain)
+target_link_libraries(unit_tests PRIVATE
+  custom_mpl::custom_mpl
+  Catch2::Catch2WithMain
+)
 add_test(NAME unit_tests COMMAND unit_tests)
